--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ Django==5.2.5
 django-cors-headers==4.7.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
-psycopg2-binary==2.9.10
+mysqlclient==2.2.4
 PyJWT==2.10.1
 sqlparse==0.5.3
 whitenoise==6.7.0
