--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -6,6 +6,11 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "skipLibCheck": true,
     "paths": {
       "@/*": ["./*"],
       "@/constants/*": ["./constants/*"],
