--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -9,7 +9,7 @@
     "target": "ES2020",
     "lib": ["ES2020", "DOM"],
     "module": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "skipLibCheck": true,
     "paths": {
       "@/*": ["./*"],
