--- a/mobile/package.json
+++ b/mobile/package.json
@@ -42,7 +42,8 @@
     "react-native-svg": "^15.13.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets-core": "^1.6.2"
+    "react-native-worklets-core": "^1.6.2",
+    "expo-image-picker": "~17.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
